<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin"
    android:background="@drawable/bg_dialog_8"
    android:gravity="center_horizontal"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/margin_32"
    android:paddingVertical="@dimen/margin">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/location_permission_required"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/location_permission_required_msg"
        android:textAlignment="center"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@color/color_light_grey" />

    <Button
        android:id="@+id/btn_ok"
        style="?android:borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/ok"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

</LinearLayout>